--- a/src/pages/detail/DetailPanel.module.scss
+++ b/src/pages/detail/DetailPanel.module.scss
@@ -1,3 +1,19 @@
-.flexCard {
+.card {
+  flex-direction: column;
+  gap: 20px;
+  background: white;
+  padding: 24px;
   border-radius: 12px;
+}
+
+.textInputBox {
+  gap: 16px;
+}
+
+.textInputSize {
+  width: 50%;
+}
+
+.passwordList {
+
 }
